--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ gems:
   - jekyll-gist
 
 jekyll-mentions:
-    base_url: https://dmcwo.github.io/research-tips/
+    base_url: http://dmcwo.github.io/research-tips/
 
 # Exclude list
 exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile]
