trying to get navigation going
seems to work using the _data which is kind of cool

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Research Tips and Strategies
 description: A collection of tips and strategies to help you get started on your research projects
 
-url: https://dmcwo.github.io/research-tips
+url: https://dmcwo.github.io
 baseurl: "/research-tips"
 paginate_path: "blog/page:num/"
 permalink: :title/
