--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,15 @@
 # main links
 main:
+  - title: "Home"
+    url: /index.html/
+    icon: home
   - title: "About"
     url: /about/
+    icon: info_outline
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+  
