index trailing slash madness

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "Home"
-    url: /index.html/
+    url: /index.html
     icon: home
   - title: "About"
     url: /about/
