lots of updates
ready?

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Research Tips and Strategies
-description: A collection of tips and strategies to help you get started on your research projects
+title: Strategies for Research and Writing
+description: Quick and practical research and writing strategies, collaboratively designed by students, teachers, and librarians at UCLA.
 
 url: https://uclalibrary.github.io
 baseurl: "/research-tips"
@@ -36,8 +36,8 @@ navigation:
 
 social:
    github: uclalibrary
-   twitter: dmcwo
-#   facebook: 
+   twitter: WIREbruin
+   facebook: WIREbruin
 #   email: 
 
 # google_analytics: "UA-"
