--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Strategies for Research and Writing
-description: Quick and practical research and writing strategies, collaboratively designed by students, teachers, and librarians at UCLA.
+description: Quick and practical research and writing strategies, collaboratively designed by students, teachers, and librarians at UCLA
 
 url: https://uclalibrary.github.io
 baseurl: "/research-tips"
