--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: WI+RE: Strategies for Research and Writing
+title: "WI+RE: Strategies for Research and Writing"
 description: Quick and practical research and writing strategies, collaboratively designed by students, teachers, and librarians at UCLA.
 
 url: https://uclalibrary.github.io
