--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,23 @@
 title: "WI+RE"
 description: WI+RE (Writing Instruction + Research Education) is a UCLA community focused on helping all learners succeed in their writing and research projects.
+author: {
+            "@type": "EducationalOrganization",
+            "name": "WI+RE",
+            "url": "https://uclalibrary.github.io/research-tips/",
+            "email": "uclawire@ucla.edu",
+            "description": "WI+RE (Writing Instruction + Research Education) is a UCLA community focused on helping all learners succeed in their writing and research projects.",
+            "alternateName": "Writing Instruction and Research Education",
+            "parentOrganization": "UCLA Library",
+            "publishingPrinciples": "https://uclalibrary.github.io/research-tips/about/",
+            "award": "ARL Film Festival Best Reflection of Diversity 2018",
+            "sameAs": [
+               "https://twitter.com/WIREbruin",
+               "https://www.facebook.com/WIREbruin"
+             ],
+            "brand": [
+               "UCLA",
+               "UCLA Library"
+             ]
 
 url: https://uclalibrary.github.io/research-tips
 baseurl: "/research-tips"
