--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: WI+RE (Writing Instruction + Research Education) is a UCLA communit
 seo:
     type: HowTo
 
-url: https://uclalibrary.github.io/research-tips
+url: https://uclalibrary.github.io/
 baseurl: "/research-tips"
 paginate_path: "blog/page:num/"
 permalink: :title/
