--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-title: "WI+RE"
+title: "UCLA WI+RE (Writing Instruction + Research Education)"
 description: WI+RE (Writing Instruction + Research Education) is a UCLA community focused on helping all learners succeed in their writing and research projects.
-seo:
-    type: HowTo
+author: UCLA WI+RE
 
 url: https://uclalibrary.github.io/
 baseurl: "/research-tips"
