--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "UCLA WI+RE (Writing Instruction + Research Education)"
+title: "WI+RE"
 description: WI+RE (Writing Instruction + Research Education) is a UCLA community focused on helping all learners succeed in their writing and research projects.
 author: UCLA WI+RE
 
