--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: uclawire@g.ucla.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Quick and practical research and writing tutorials, collaboratively designed by students at UCLA.
 baseurl: "/research-tips" # the subpath of your site, e.g. /blog
-url: "http://uclalibrary.github.io/research-tips" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://uclalibrary.github.io/research-tips" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: WIREbruin
 github_username:  uclalibrary/research-tips
 facebook_username: WIREbruin
