--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -57,6 +57,17 @@ twentynineteen:
   place: LOEX 2019, Minneapolis, MN
   url: https://dmcwo.github.io/dmcwo/presentations/better-together-student-led-media
   fa-icon: fas fa-images
+- title: "Wheel of Sources—March 2019 Site of the Month Interview"
+  authors: 
+    - kian-ravaei
+    - Emilia Marcyk
+    - doug-worsham
+  type: interview
+  date: 2019-03-01
+  year: 2019
+  place: ACRL Instruction Section Website
+  url: https://acrl.ala.org/IS/instruction-tools-resources-2/pedagogy/primo-peer-reviewed-instruction-materials-online/primo-site-of-the-month/march-2019-site-of-the-month/
+  fa-icon: fas fa-comments
 - title: "Intersecting Surveys and Fun: Reducing Library Anxiety in a Library Poster Survey Series"
   authors: 
   - jen-pierre
