update March video view stats

--- a/_data/stats.yml
+++ b/_data/stats.yml
@@ -2,6 +2,8 @@ workshops:
     number: 1520
     last-updated: 2020-02-01
 youtube:
+    number: 146.5K
+    last-updated: 2020-03-25
     number: 138K
     last-updated: 2020-02-01
 website:
