--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -96,7 +96,7 @@
   reference: https://en.wikipedia.org/wiki/Pedagogy
   
 - term: "PhD"
-  definition: "the highest university degree that is conferred after a course of study by a university. Because it is an earned research degree, those studying for a PhD are usually required to produce original research, normally in the form of a thesis or dissertation, and defend their work against experts in the field. The completion of a PhD is often a requirement for employment as a university professor, researcher, or scientist in many fields. Individuals who have earned a Doctor of Philosophy degree may, in many jurisdictions, use the title Doctor (often abbreviated "Dr" or "Dr.") with their name."
+  definition: "the highest university degree that is conferred after a course of study by a university. Because it is an earned research degree, those studying for a PhD are usually required to produce original research, normally in the form of a thesis or dissertation, and defend their work against experts in the field. The completion of a PhD is often a requirement for employment as a university professor, researcher, or scientist in many fields. Individuals who have earned a Doctor of Philosophy degree may, in many jurisdictions, use the title Doctor (often abbreviated Dr or Dr.) with their name."
   reference: https://en.wikipedia.org/wiki/Doctor_of_Philosophy
   
 - term: "PI (Principal Investigator)"
