--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -162,7 +162,7 @@
   definition: "declarative sentence that asserts the position a paper will be taking"
   reference: https://wp.ucla.edu/wpcontent/uploads/2016/01/UWC_handouts_Thesis-Construction_TB-edits.pdf
   
-- term: "Translational Research
+- term: "Translational Research"
   definition: "medical research that is concerned with facilitating the practical application of scientific discoveries to the development and implementation of new ways to prevent, diagnose, and treat disease"
   reference: https://www.merriam-webster.com/dictionary/translational%20research
   
