--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -91,7 +91,7 @@
   reference:  https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4975196/
 
 - term: "Pedagogy"
-  definition: "as the approach to teaching: the theory and practice of learning, and how this process influences, and is influenced by, the social, political and psychological development of learners. Pedagogy is the practice of considering the interactions that take place during learning."
+  definition: "as the approach to teaching, the theory and practice of learning and how this process influences, and is influenced by, the social, political and psychological development of learners. Pedagogy is the practice of considering the interactions that take place during learning."
   reference: https://en.wikipedia.org/wiki/Pedagogy
   
 - term: "PhD"
