--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -31,7 +31,7 @@
   reference: https://www.qualtrics.com/experience-management/research/cluster-analysis/
   
 - term: "Cohort Analysis"
-  definition: "group by group analytic treatment of individuals having a statistical factor in common to each group. Group members share a particular characteristic [e.g., born in a given year] or a common experience [e.g., entering a college at a given time]."
+  definition: "group by group analytic treatment of individuals having a statistical factor in common to each group. Group members share a particular characteristic (e.g., born in a given year) or a common experience (e.g., entering a college at a given time)."
   reference: https://libguides.usc.edu/writingguide/researchglossary
   
 - term: "Confirmability Objectivity"
