--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -9,7 +9,7 @@
   reference: https://en.wikipedia.org/wiki/Academic_conference
   
 - term: "Appendix"
-  defintion: "Supplementary material usually attached at the end of a piece of writing"
+  definition: "Supplementary material usually attached at the end of a piece of writing"
   reference: https://www.merriam-webster.com/dictionary/appendix
   
 - term: "Article database"
