--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -3,6 +3,10 @@
   reference: https://libguides.usc.edu/writingguide/abstract
   example:
   
+- term: Appendix
+  definition: “Supplementary material usually attached at the end of a piece of writing.” 
+  reference: https://www.merriam-webster.com/dictionary/appendix 
+  
 - term: "Academic conference"
   definition: "An event for researchers to present and discuss their recent work. It is often a part of an academic professional association’s annual meeting."
   reference: https://en.wikipedia.org/wiki/Academic_conference
