--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -3,7 +3,7 @@
   reference: https://libguides.usc.edu/writingguide/abstract
   example:
   
-- term: Appendix
+- term: "Appendix"
   definition: “Supplementary material usually attached at the end of a piece of writing.” 
   reference: https://www.merriam-webster.com/dictionary/appendix 
   
