--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -4,7 +4,7 @@
   example:
   
 - term: "Appendix"
-  definition: “Supplementary material usually attached at the end of a piece of writing.” 
+  definition: "Supplementary material usually attached at the end of a piece of writing."
   reference: https://www.merriam-webster.com/dictionary/appendix 
   
 - term: "Academic conference"
