--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -27,6 +27,18 @@
   definition: "a set of rules on how to cite sources in academic writing. The three most common types include MLA, APA, and Chicago."
   reference: https://guides.library.ucla.edu/start/citing
   
+  - term: “Cluster Analysis”  
+  definition: "a statistical method for processing data. It works by organizing items into groups, or clusters, on the basis of how closely associated they are."
+  reference: https://www.qualtrics.com/experience-management/research/cluster-analysis/ 
+  
+  - term: “Cohort Analysis”  
+  definition: "group by group analytic treatment of individuals having a statistical factor in common to each group. Group members share a particular characteristic [e.g., born in a given year] or a common experience [e.g., entering a college at a given time]."
+  reference: https://libguides.usc.edu/writingguide/researchglossary 
+
+- term: “Confirmability Objectivity” 
+  definition: "The findings of the study could be confirmed by another person conducting the same study."
+  reference: https://libguides.usc.edu/writingguide/researchglossary 
+  
 - term: "Contract course"
   definition: "supervised individual research or investigation under guidance of faculty member, with a culminating paper or project"
   reference: https://www.registrar.ucla.edu/Registration-Classes/Enrollment Policies/Enrollment-Restrictions/Contract-Courses
@@ -35,10 +47,14 @@
   definition: "A curriculum vitae, also called a vita or CV, is similar to a résumé and provides key information about your skills, education, and experience to a potential employer. A CV is typically used to apply for academic and research positions and for some graduate programs. It is longer than a résumé and displays academic credentials and accomplishments in greater detail."
   reference: https://grad.ucla.edu/asis/agep/advcv.pdf
   
+- term: “Dissertation” 
+  definition: "An extended usually written treatment of a subject. specifically : one submitted for a doctorate"
+  reference: https://www.merriam-webster.com/dictionary/dissertation 
+  
 - term: "Double-blind review"
   definition: "a form of peer-review when both the reviewer and author identities are concealed from the reviewers, and vice versa, throughout the review process."
   reference: https://www.journals.elsevier.com/social-science-and-medicine/policies/double-blind-peer-reviewguidelines
-  
+
 - term: "Faculty-initiated project"
   definition: "working on a faculty-initiated project gives you the chance to help a faculty member on a research project. A great resource for finding faculty-initiated projects is the Undergraduate Research Portal. In addition, you could ask your professors and TAs about available research opportunities"
   reference: http://hass.ugresearch.ucla.edu/getting-started/project/
