--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -27,15 +27,15 @@
   definition: "a set of rules on how to cite sources in academic writing. The three most common types include MLA, APA, and Chicago."
   reference: https://guides.library.ucla.edu/start/citing
   
-- term: “Cluster Analysis”  
+- term: Cluster Analysis  
   definition: "a statistical method for processing data. It works by organizing items into groups, or clusters, on the basis of how closely associated they are."
   reference: https://www.qualtrics.com/experience-management/research/cluster-analysis/ 
   
-- term: “Cohort Analysis”  
+- term: "Cohort Analysis"  
   definition: "group by group analytic treatment of individuals having a statistical factor in common to each group. Group members share a particular characteristic [e.g., born in a given year] or a common experience [e.g., entering a college at a given time]."
   reference: https://libguides.usc.edu/writingguide/researchglossary 
 
-- term: “Confirmability Objectivity” 
+- term: "Confirmability Objectivity" 
   definition: "The findings of the study could be confirmed by another person conducting the same study."
   reference: https://libguides.usc.edu/writingguide/researchglossary 
   
@@ -47,7 +47,7 @@
   definition: "A curriculum vitae, also called a vita or CV, is similar to a résumé and provides key information about your skills, education, and experience to a potential employer. A CV is typically used to apply for academic and research positions and for some graduate programs. It is longer than a résumé and displays academic credentials and accomplishments in greater detail."
   reference: https://grad.ucla.edu/asis/agep/advcv.pdf
   
-- term: “Dissertation” 
+- term: "Dissertation" 
   definition: "An extended usually written treatment of a subject. specifically : one submitted for a doctorate"
   reference: https://www.merriam-webster.com/dictionary/dissertation 
   
