--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -27,7 +27,7 @@
   definition: "a set of rules on how to cite sources in academic writing. The three most common types include MLA, APA, and Chicago."
   reference: https://guides.library.ucla.edu/start/citing
   
-- term: Cluster Analysis  
+- term: "Cluster Analysis"  
   definition: "a statistical method for processing data. It works by organizing items into groups, or clusters, on the basis of how closely associated they are."
   reference: https://www.qualtrics.com/experience-management/research/cluster-analysis/ 
   
