--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -64,6 +64,10 @@
   definition: "working on a faculty-initiated project gives you the chance to help a faculty member on a research project. A great resource for finding faculty-initiated projects is the Undergraduate Research Portal. In addition, you could ask your professors and TAs about available research opportunities"
   reference: http://hass.ugresearch.ucla.edu/getting-started/project/
   
+- term: "Field Studies"
+  definition: "Academic or other investigative studies undertaken in a natural setting, rather than in laboratories, classrooms, or other structured environments."
+  reference: https://libguides.usc.edu/writingguide/researchglossary 
+  
 - term: "Graduate record exam"
   definition: "The Graduate Record Examination, or GRE, is an important step in the graduate school or business school application process. The GRE is a multiple-choice, computer-based, standardized exam that is often required for admission to graduate programs and graduate business programs (MBA) globally"
   reference: https://www.ets.org/gre/revised_general/about
@@ -79,6 +83,10 @@
 - term: "Literature review"
   definition: "A literature review discusses published information in a particular subject area, and sometimes information in a particular subject area within a certain time period. It can be just a simple summary of the sources, but it usually has an organizational pattern and combines both summary and synthesis"
   reference: https://wp.ucla.edu/wp-content/uploads/2015/12/Writing-the-Literature-Review.pdf
+  
+- term: "Margin of Error"
+  definition: "the permittable or acceptable deviation from the target or a specific value. The allowance for slight error or miscalculation or changing circumstances in a study."
+  reference: https://libguides.usc.edu/writingguide/researchglossary 
   
 - term: "Methodology"
   definition: "Research methodology is the specific procedures or techniques used to identify, select, process, and analyze information about a topic. In a research paper, the methodology section allows the reader to critically evaluate a study’s overall validity and reliability. It answers two main questions - How was the data collected or generated? How was it analyzed?"
