--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -68,6 +68,10 @@
   definition: "Academic or other investigative studies undertaken in a natural setting, rather than in laboratories, classrooms, or other structured environments."
   reference: https://libguides.usc.edu/writingguide/researchglossary 
   
+- term: "Framework"
+  definition: "the structure and support that may be used as both the launching point and the on-going guidelines for investigating a research problem."
+  reference: https://libguides.usc.edu/writingguide/researchglossary 
+
 - term: "Graduate record exam"
   definition: "The Graduate Record Examination, or GRE, is an important step in the graduate school or business school application process. The GRE is a multiple-choice, computer-based, standardized exam that is often required for admission to graduate programs and graduate business programs (MBA) globally"
   reference: https://www.ets.org/gre/revised_general/about
