--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -69,7 +69,7 @@
   reference: https://libguides.usc.edu/writingguide/researchglossary 
   
 - term: "Framework"
-  definition: "the structure and support that may be used as both the launching point and the on-going guidelines for investigating a research problem."
+  definition: "The structure and support that may be used as both the launching point and the on-going guidelines for investigating a research problem."
   reference: https://libguides.usc.edu/writingguide/researchglossary 
 
 - term: "Graduate record exam"
